# UWRT-Training

./: .gitignore  CMakeLists.txt  package.xml
action/: Move.action
include/training/: CircularMotion.hpp  Constants.hpp  DistancePublisher.hpp  TurtleClearer.hpp  TurtleMover.hpp  TurtleReset.hpp  TurtleSpawner.hpp
launch/: launch.py
src/: CircularMotion.cpp  Constants.cpp  DistancePublisher.cpp  TurtleClearer.cpp  TurtleMover.cpp  TurtleReset.cpp  TurtleSpawner.cpp  main.cpp
